commands -> info to also show replacements and aliases
